# submind

./: Dockerfile  main.py  pyproject.toml
submind/: action.py  documents.py  final_run.py  initial_run.py  models.py  new_answers.py  reflect.py  research.py  thoughts.py  twitter_style.py
